[project]
name = "cc-model-switcher"
version = "1.0.0"
description = "A GUI tool for switching Claude Code API configurations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["claude", "claude-code", "api", "switcher", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/cc-model-switcher"
Repository = "https://github.com/yourusername/cc-model-switcher"
Issues = "https://github.com/yourusername/cc-model-switcher/issues"

[project.scripts]
cc-model-switcher = "api_switcher:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
